# opengl-exp

./: CMakeLists.txt  README.md  bootstrap.sh
include/: controls.h  game.h  init.h  load_shader.h  utils.h
res/img/: uvtemplate.dds
res/shaders/: fragment_shader.frag  vertex_shader.vert
src/: CMakeLists.txt  constrols.c  game.c  init.c  load_shader.c  main.c  utils.c
